2012-03-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3496061 ] IndicationSubscription May Be Undeletable

2012-02-29 Narasimha Sharoff <nsharoff@us.ibm.com>

	* brokerUpc.c
	[ 3483200 ] duplicate indication deliveries

2012-02-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 3495806 ] isChild() can cause a provider mismatch
	(patch by Viktor Mihajlovski)

	* Makefile.am, test/Makefile.am, test/TestProviders/tests/IndRetryTest.sh,
	  test/TestProviders/tests/Makefile.am, test/TestProviders/tests/xmltest.sh,
	  test/commands/Makefile.am, test/commands/sfcbdump.sh,
	  test/unittest/Makefile.am, test/xmltest/Makefile.am, test/xmltest/xmltest.sh,
	  test/xmltest/modifyInstance_regprofile.lines:
	[ 3495789 ] Makefile improvements for test suite
	(patch by Viktor Mihajlovski)

2012-02-29 Narasimha Sharoff <nsharoff@us.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c
	[ 3495060 ] verify filter and handler information during subscription

2012-02-29 Dave Heller <hellerda@us.ibm.com>

	* cimslpSLP.c:
	[ 3495801 ] Correction to 3495343

2012-02-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 3416164 ] Don't write CIM_IndicationService to disk

2012-02-28 Dave Heller <hellerda@us.ibm.com>

	* cimslpSLP.c, indCIMXMLExport.c:
	[ 3495343 ] Bad pointer references in trace statements

2012-02-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, sfcbsem.c
	[ 3493493 ] Add sfcbsem
	(code by Viktor Mihajlovski)

2012-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3457460 ] PAM_RHOST set wrong

2012-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 3492362 ] Problem with whitespace trimming if local connect only

2012-02-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mlog.c, mlog.h, cimcClientSfcbLocal.c,
	  sfcBroker.c,sfcbinst2mof.c:
	[ 3488688 ] Don't spawn logger for clients
