@@ -39,6 +39,7 @@ Bugs fixed:
 - 3495806 isChild() can cause a provider mismatch
 - 3483200 duplicate indication deliveries
 - 3496061 IndicationSubscription May Be Undeletable
+- 3484083 Exclude SFCBIndicationID
 
 Changes in 1.3.13
 =================
